--- a/3_import스타일시트.html
+++ b/3_import스타일시트.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imoport스타일시트</title><link rel="stylesheet" href="/css/개인연습.css">
+    <title>imoport스타일시트</title>
+    <link rel="stylesheet" href="/css/3.css">
 </head>
 <body>
     <p>imoport스타일시트 실습</p>
-</body>
+</body> 
 </html>
