--- a/flexbox.html/introduce.html
+++ b/flexbox.html/introduce.html
@@ -71,8 +71,11 @@
             </div>
             <div class="content-row-3">
                 <h4>플랫 디자인의 미래</h4>
+                <div class="para">
                 <p>플랫 디자인의 미래는 누구도 알 수 없지만, 감히 말하자면 플랫 디자인은 다른 디자인 흐름보다 오래 갈 것이라는 겁니다. 이제는 스큐어 모피즘 디자인 개념을 벗어나 확장성이 뛰어나고 심플하고 직관적인 플랫 디자인을 사용자 또한 선호 할 것입니다.</p>
-                <p>Flat design of the future is unknown, but no one dare to say Flat design that will take longer than other design flow. Now that's out of the concept of cure fur minimalist design scalable Flat design, simple and intuitive user you will also like.</p>
+                <p>Flat design of the future is unknown, but no one dare to say Flat design that will take longer than other design flow. Now that's out of the concept of cure fur minimalist design scalable Flat design, simple and intuitive user you will also like
+                .</p>
+                </div>
             </div>
         </section>
         <footer>
